# cpu16-pipeline

./: .gitignore  =wviwyddOControlOp cop = cu.control_op(jkpvf=ljkf;i)jkjOdec_reg.exec_op = cop.exec_op;jkodec_reg.mem_op = cop.mem_op;  CMakeLists.txt  DISCUSSION.md  README.md
.ccls-cache/@@home@jonas@Dev@Programming@cpp@emu@cpu16-pipeline/: @usr@include@alloca.h.blob  @usr@include@arpa@inet.h.blob  @usr@include@asm-generic@bitsperlong.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm-generic@int-ll64.h.blob  @usr@include@asm-generic@posix_types.h.blob  @usr@include@asm-generic@socket.h.blob  @usr@include@asm-generic@sockios.h.blob  @usr@include@asm-generic@types.h.blob  @usr@include@asm@bitsperlong.h.blob  @usr@include@asm@errno.h.blob  @usr@include@asm@posix_types.h.blob  @usr@include@asm@posix_types_64.h.blob  @usr@include@asm@socket.h.blob  @usr@include@asm@sockios.h.blob  @usr@include@asm@types.h.blob  @usr@include@assert.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@confname.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@environments.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@fcntl-linux.h.blob  @usr@include@bits@fcntl.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@flt-eval-method.h.blob  @usr@include@bits@fp-fast.h.blob  @usr@include@bits@fp-logb.h.blob  @usr@include@bits@getopt_core.h.blob  @usr@include@bits@getopt_posix.h.blob  @usr@include@bits@in.h.blob  @usr@include@bits@iscanonical.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@libm-simd-decl-stubs.h.blob  @usr@include@bits@local_lim.h.blob  (+325 more)
.ccls-cache/@home@jonas@Dev@Programming@cpp@emu@cpu16-pipeline/: out@build@_deps@googletest-src@googlemock@include@gmock@gmock-actions.h.blob  out@build@_deps@googletest-src@googlemock@include@gmock@gmock-cardinalities.h.blob  out@build@_deps@googletest-src@googlemock@include@gmock@gmock-function-mocker.h.blob  out@build@_deps@googletest-src@googlemock@include@gmock@gmock-matchers.h.blob  out@build@_deps@googletest-src@googlemock@include@gmock@gmock-more-actions.h.blob  out@build@_deps@googletest-src@googlemock@include@gmock@gmock-more-matchers.h.blob  out@build@_deps@googletest-src@googlemock@include@gmock@gmock-nice-strict.h.blob  out@build@_deps@googletest-src@googlemock@include@gmock@gmock-spec-builders.h.blob  out@build@_deps@googletest-src@googlemock@include@gmock@gmock.h.blob  out@build@_deps@googletest-src@googlemock@include@gmock@internal@custom@gmock-generated-actions.h.blob  out@build@_deps@googletest-src@googlemock@include@gmock@internal@custom@gmock-matchers.h.blob  out@build@_deps@googletest-src@googlemock@include@gmock@internal@custom@gmock-port.h.blob  out@build@_deps@googletest-src@googlemock@include@gmock@internal@gmock-internal-utils.h.blob  out@build@_deps@googletest-src@googlemock@include@gmock@internal@gmock-port.h.blob  out@build@_deps@googletest-src@googlemock@include@gmock@internal@gmock-pp.h.blob  out@build@_deps@googletest-src@googlemock@src@gmock-all.cc.blob  out@build@_deps@googletest-src@googlemock@src@gmock-cardinalities.cc.blob  out@build@_deps@googletest-src@googlemock@src@gmock-internal-utils.cc.blob  out@build@_deps@googletest-src@googlemock@src@gmock-matchers.cc.blob  out@build@_deps@googletest-src@googlemock@src@gmock-spec-builders.cc.blob  out@build@_deps@googletest-src@googlemock@src@gmock.cc.blob  out@build@_deps@googletest-src@googlemock@src@gmock_main.cc.blob  out@build@_deps@googletest-src@googletest@include@gtest@gtest-assertion-result.h.blob  out@build@_deps@googletest-src@googletest@include@gtest@gtest-death-test.h.blob  out@build@_deps@googletest-src@googletest@include@gtest@gtest-matchers.h.blob  out@build@_deps@googletest-src@googletest@include@gtest@gtest-message.h.blob  out@build@_deps@googletest-src@googletest@include@gtest@gtest-param-test.h.blob  out@build@_deps@googletest-src@googletest@include@gtest@gtest-printers.h.blob  out@build@_deps@googletest-src@googletest@include@gtest@gtest-spi.h.blob  out@build@_deps@googletest-src@googletest@include@gtest@gtest-test-part.h.blob  out@build@_deps@googletest-src@googletest@include@gtest@gtest-typed-test.h.blob  out@build@_deps@googletest-src@googletest@include@gtest@gtest.h.blob  out@build@_deps@googletest-src@googletest@include@gtest@gtest_pred_impl.h.blob  out@build@_deps@googletest-src@googletest@include@gtest@gtest_prod.h.blob  out@build@_deps@googletest-src@googletest@include@gtest@internal@custom@gtest-port.h.blob  out@build@_deps@googletest-src@googletest@include@gtest@internal@custom@gtest-printers.h.blob  out@build@_deps@googletest-src@googletest@include@gtest@internal@custom@gtest.h.blob  out@build@_deps@googletest-src@googletest@include@gtest@internal@gtest-death-test-internal.h.blob  out@build@_deps@googletest-src@googletest@include@gtest@internal@gtest-filepath.h.blob  (+52 more)
images/: Makefile
src/: CMakeLists.txt  main.cpp
src/ALU/: CMakeLists.txt  alu.hpp  alu_16.cpp  alu_16.hpp
src/ControlUnit/: CMakeLists.txt  control_unit.hpp  control_unit_16.cpp  control_unit_16.hpp
src/Emulator/: CMakeLists.txt  emulator.cpp  emulator.hpp
src/InstructionMemory/: CMakeLists.txt
src/Memory/: CMakeLists.txt
src/MicroArch/: CMakeLists.txt  microarch.hpp
src/Pipeline/: CMakeLists.txt
src/Pipeline/PipelineRegister/: CMakeLists.txt  pipeline_register.cpp  pipeline_register.hpp
src/Pipeline/PipelineStage/: CMakeLists.txt  pipeline_stage.cpp  pipeline_stage.hpp
src/StateElements/: CMakeLists.txt  state_elements.cpp  state_elements.hpp
tests/: CMakeLists.txt  alu16_test.cc  control_op_test.cc  emulator_test.cc  memory_test.cc  pipeline_stage_test.cc  state_elements_test.cc
